@@ -1,5 +1,7 @@
 # changes since the last release:
 
+  -- the new refluxing method introduced in 16.11 has been removed,
+     as it was determined to not provide any benefit in accuracy.
 
 # 17.02
 
